objects/Asset_Verification_Owners__mdt.object
<CustomObject>
    <description>Metadata type used by assignment manager processes to see who should do assigning for asset verification work types.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Use to activate and deactivate records for the selection process</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User_Record_Id__c</fullName>
        <description>The CaseSafe_Id on the user record</description>
        <label>User Record Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <description>The username of the user</description>
        <label>Username</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Asset Verification Owner</label>
    <pluralLabel>Asset Verification Owners</pluralLabel>
</CustomObject>